# tamagochi

./: Cargo.toml  package-lock.json  package.json
.soroban/: Tamagochi-id
.soroban/identity/: alice.toml
contracts/tamagochi/: Cargo.toml
contracts/tamagochi/src/: lib.rs  test.rs
src/components/: Meal.astro  Medicine.astro  Play.astro  Snack.astro
src/layouts/: Layout.astro
src/pages/: index.astro
